--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=flag
+# External API Configuration
+restcountries.api.base-url=https://restcountries.com/v3.1
+restcountries.api.timeout=5000
+# Caching
+app.cache.countries.ttl-minutes=30
+app.cache.countries.max-size=100
