--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,3 +5,6 @@ restcountries.api.timeout=5000
 # Caching
 app.cache.countries.ttl-minutes=30
 app.cache.countries.max-size=100
+
+server.port=8080
+springdoc.swagger-ui.path=/swagger-ui.html
